# cpp_difficult_moments

./: .gitignore  README.md
01/: CMakeLists.txt
01/data/: phonebook.txt
01/include/: main.h  person.h  phonebook.h  phonenumber.h
01/src/: main.cpp  person.cpp  phonebook.cpp  phonenumber.cpp
02/: CMakeLists.txt
02/data/: results.txt  war_and_peace.txt
02/include/: helpers.h  timer.h
02/src/: helpers.cpp  main.cpp  timer.cpp
03/data/: result.txt
03/include/: iterator.h  main.h  matrix.h
03/src/: main.cpp
04/: CMakeLists.txt
04/data/: results.txt
04/include/: insert_sorted.h  main.h
04/src/: main.cpp
05/data/: result.txt
05/include/: main.h
05/src/: main.cpp
06/: CMakeLists.txt
06/data/: result.txt
06/include/: main.h
06/src/: main.cpp
07/: CMakeLists.txt
07/include/: generate_classes.txt  students.pb.h
07/src/: main.cpp
08/: CMakeLists.txt
08/include/: main.h  person.h  phonenumber.h  unittest.h
08/src/: main.cpp  person.cpp
